--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ timezone: Australia/Sydney
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Packet Surgeon # the main title
+title: Ahmed Elemam # the main title
 
-tagline: A Deep dive in networking # it will display as the subtitle
+tagline: Cisco Consultant | Ex-AWS | Sharing my Expeience  # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
           sharing 12 years of networking experience.
