--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ theme_mode: # [light | dark]
 cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: 
+avatar: https://avatars.githubusercontent.com/u/9201968?s=400&u=63f172f146846dd8467d2755d15a8cd67d843853&v=4
 
 # The URL of the site-wide social preview image used in SEO `og:image` meta tag.
 # It can be overridden by a customized `page.image` in front matter.
