--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone: Australia/Sydney
 
 title: Ahmed Elemam # the main title
 
-tagline: Cisco Consultant | Ex-AWS | Sharing my Expeience  # it will display as the subtitle
+tagline: Network Consultant | Ex-AWS | Sharing my Expeience  # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
           sharing 12 years of networking experience.
@@ -38,7 +38,7 @@ social:
   email: ahmed@ahmedelemam.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your Twitter homepage
+    - https://twitter.com/aelemamazzam # change to your Twitter homepage
     - https://github.com/ahmedelemamn # change to your GitHub homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
