--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone: Australia/Sydney
 
 title: Ahmed Elemam # the main title
 
-tagline: Network Consultant | Ex-AWS | Sharing my Expeience  # it will display as the subtitle
+tagline: Network Consultant | Ex-AWS | Sharing my Expeience and Documenting my studies  # it will display as the subtitle
 
 description: >- # used by seo meta and the atom feed
           sharing 12 years of networking experience.
